---------------------------------------------------------------------------------------------------
Version: 17.0.15
Date: 2019-12-06
  Features:
  Changes:
    - Shared damage kill alerts include how many kills and deaths the 2 participants have had
  Bugfixes:
    - fixed typo in snowball mod compatibility added in 17.0.13
  Info:
---------------------------------------------------------------------------------------------------
Version: 17.0.14
Date: 2019-12-05
  Features:
    - Shared damage - When a player dies to shared damage the "killer" player is named and shamed. Also logged to stats table (no viewer yet)
  Changes:
  Bugfixes:
  Info:
---------------------------------------------------------------------------------------------------
Version: 17.0.13
Date: 2019-12-03
  Features:
    - Players are safe from suffering shared damage for 60 seconds after respawn.
    - Biter Hunting Packs, if the target player disconnects it is a loss. Biters will be re-targeted at spawn after the target dies or disconnects.
  Changes:
    - Added shared damage exclusion for "snowball" type damage to avoid conflicting with that mod.
    - Shared damage reduced to 75%
  Bugfixes:
    - Correct intermittent crash for some players with scheduled event functions shown in logs.
    - Fix crash when a vehicle died by non mod means.
    - Don't generate water barrier tiles past edge of map tile width
  Info:
---------------------------------------------------------------------------------------------------
Version: 17.0.12
Date: 2019-11-23
  Features:
    - Added mode "December 2019"
  Changes:
  Bugfixes:
  Info:
---------------------------------------------------------------------------------------------------
Version: 17.0.11
Date: 2019-05-31
  Features:
    - Added mode "June 2019"
  Changes:
  Bugfixes:
  Info:
---------------------------------------------------------------------------------------------------
Version: 17.0.10
Date: 2019-05-19
  Features:
  Changes: