@@ -1,8 +1,16 @@
 local Events = require("utility/events")
 --local Logging = require("utility/logging")
+local Utils = require("utility/utils")
 local SharedPlayerDamage = {}
+
+--[[-----------------------------------------------------------
+
+    Only supports a single surface
+
+-------------------------------------------------------------]]
 local ticksSafeAfterRespawn = 60 * 60
 local damageMultiplier = 0.75
+local playerSpawnPos = {x = 0, y = 0}
 
 SharedPlayerDamage.CreateGlobals = function()
     global.SharedPlayerDamage = global.SharedPlayerDamage or {}
@@ -11,12 +19,14 @@ SharedPlayerDamage.CreateGlobals = function()
     global.SharedPlayerDamage.lastPlayerDamageSharedName = global.SharedPlayerDamage.lastPlayerDamageSharedName or nil
     global.SharedPlayerDamage.playerCausedOthersDeaths = global.SharedPlayerDamage.playerCausedOthersDeaths or {}
     global.SharedPlayerDamage.playerDeathsFromOthers = global.SharedPlayerDamage.playerDeathsFromOthers or {}
+    global.SharedPlayerDamage.farestGeneratedMapDistance = global.SharedPlayerDamage.farestGeneratedMapDistance or 0
 end
 
 SharedPlayerDamage.OnLoad = function()
     Events.RegisterHandler(defines.events.on_entity_damaged, "SharedPlayerDamage", SharedPlayerDamage.OnEntityDamagedFilteredCharacter, "type=character")
     Events.RegisterHandler(defines.events.on_player_respawned, "SharedPlayerDamage", SharedPlayerDamage.OnPlayerRespawned)
     Events.RegisterHandler(defines.events.on_player_died, "SharedPlayerDamage", SharedPlayerDamage.OnPlayerDied)
+    Events.RegisterHandler(defines.events.on_chunk_generated, "SharedPlayerDamage", SharedPlayerDamage.OnChunkGenerated)
 end
 
 SharedPlayerDamage.OnStartup = function()
@@ -26,7 +36,7 @@ SharedPlayerDamage.OnStartup = function()
 end
 
 SharedPlayerDamage.OnEntityDamagedFilteredCharacter = function(event)
-    if (not global.SharedPlayerDamage.enabled) or event.force == global.SharedPlayerDamage.scriptForce then
+    if (not global.SharedPlayerDamage.enabled) or event.force == global.SharedPlayerDamage.scriptForce or event.original_damage_amount <= 0 then
         return
     end
     if event.damage_type ~= nil and (event.damage_type.name == "snowball") then
@@ -35,6 +45,8 @@ SharedPlayerDamage.OnEntityDamagedFilteredCharacter = function(event)
     local tick = event.tick
     local damageToDo = math.floor(event.original_damage_amount * damageMultiplier)
     local damagedPlayer = event.entity.player
+    local damagedPlayerPos = damagedPlayer.position
+    local fullDamageDistance = global.SharedPlayerDamage.farestGeneratedMapDistance
     global.SharedPlayerDamage.lastPlayerDamageSharedName = damagedPlayer.name
     for i, player in pairs(game.connected_players) do
         if player.index ~= damagedPlayer.index then
@@ -49,7 +61,9 @@ SharedPlayerDamage.OnEntityDamagedFilteredCharacter = function(event)
                     end
                 end
                 if not playerSafe then
-                    player.character.damage(damageToDo, global.SharedPlayerDamage.scriptForce, event.damage_type.name)
+                    local distance = Utils.GetDistance(damagedPlayerPos, player.position)
+                    local thisPlayersDamageToDo = damageToDo - (damageToDo * (distance / fullDamageDistance))
+                    player.character.damage(thisPlayersDamageToDo, global.SharedPlayerDamage.scriptForce, event.damage_type.name)
                 end
             end
         end
@@ -83,6 +97,21 @@ SharedPlayerDamage.OnPlayerDied = function(event)
     end
     local deadPlayerCount = global.SharedPlayerDamage.playerDeathsFromOthers[deadPlayerName]
     game.print({"messages.jd_plays-december-2019-shared_damage_died_by_player", deathCausingPlayer, deathCausingPlayerCount, deadPlayerName, deadPlayerCount})
+end
+
+SharedPlayerDamage.OnChunkGenerated = function(event)
+    local topLeftTile = event.area.left_top
+    local measureToPos = Utils.DeepCopy(topLeftTile)
+    if topLeftTile.x >= 0 then
+        measureToPos.x = measureToPos.x + 32
+    end
+    if topLeftTile.y >= 0 then
+        measureToPos.y = measureToPos.y + 32
+    end
+    local distance = Utils.GetDistance(playerSpawnPos, measureToPos)
+    if distance > global.SharedPlayerDamage.farestGeneratedMapDistance then
+        global.SharedPlayerDamage.farestGeneratedMapDistance = distance
+    end
 end
 
 return SharedPlayerDamage
